--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -14,6 +14,13 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install SSH key and known_hosts
+          uses: shimataro/ssh-key-action@v2
+          with:
+            key: ${{ secrets.TRELLIS_DEPLOY_SSH_PRIVATE_KEY }}
+            known_hosts: ${{ secrets.TRELLIS_DEPLOY_SSH_KNOWN_HOSTS }}
+            if_key_exists: replace
+
       - name: Setup Trellis CLI
         uses: roots/setup-trellis-cli@v1
         with:
