--- a/trellis/deploy-hooks/build-before.yml
+++ b/trellis/deploy-hooks/build-before.yml
@@ -1,50 +1,6 @@
-# Placeholder `deploy_build_before` hook for building theme assets on the
-# host machine and then copying the files to the remote server
-#
-# ⚠️ This example assumes your theme is using Sage 11
-#
-# Uncomment the lines below if you are using Sage 11
-# and replace `sage` with your theme folder
-#
-# ---
-- name: Install npm dependencies
-  command: npm install
-  delegate_to: localhost
-  args:
-    chdir: "{{ project_local_path }}/web/app/themes/sage"
-
-- name: Create Composer auth.json
-  template:
-    src: templates/auth.json.j2
-    dest: "{{ deploy_helper.new_release_path }}/auth.json"
-  no_log: false
-
-- name: Install Composer dependencies
-  command: composer install --no-ansi --no-dev --no-interaction --no-progress --optimize-autoloader --no-scripts --classmap-authoritative
-  args:
-    chdir: "{{ deploy_helper.new_release_path }}/web/app/themes/sage"
-
-- name: Compile assets for production
-  command: npm run build
-  delegate_to: localhost
-  args:
-    chdir: "{{ project_local_path }}/web/app/themes/sage"
-
-- name: Install fb-blocks dependencies
-  command: npm install
-  delegate_to: localhost
-  args:
-    chdir: "{{ project_local_path }}/web/app/plugins/fb-blocks"
-
-- name: Build fb-blocks
-  command: npm run build
-  delegate_to: localhost
-  args:
-    chdir: "{{ project_local_path }}/web/app/plugins/fb-blocks"
-
 - name: Check for manifest
   stat:
-    path: "{{ project_local_path }}/web/app/themes/sage/public/build/manifest.json"
+    path: "{{ project_path }}/web/app/themes/sage/public/build/manifest.json"
   delegate_to: localhost
   register: entrypoints_data
 
@@ -55,7 +11,7 @@
 
 - name: Copy production assets
   synchronize:
-    src: "{{ project_local_path }}/web/app/themes/sage/public"
+    src: "{{ project_path }}/web/app/themes/sage/public"
     dest: "{{ deploy_helper.new_release_path }}/web/app/themes/sage"
     group: no
     owner: no
@@ -69,9 +25,9 @@
       - --chmod=Fo=r
   delegate_to: localhost
 
-- name: Copy Git submodules manually
+- name: Copy Git submodules (fb-blocks)
   synchronize:
-    src: "{{ project_local_path }}/web/app/plugins/fb-blocks/"
+    src: "{{ project_path }}/web/app/plugins/fb-blocks/"
     dest: "{{ deploy_helper.new_release_path }}/web/app/plugins/"
     recursive: yes
     delete: yes
