--- a/trellis/group_vars/production/wordpress_sites.yml
+++ b/trellis/group_vars/production/wordpress_sites.yml
@@ -8,6 +8,7 @@ wordpress_sites:
     local_path: ../site
     branch: main
     repo: git@github.com:aitormendez/futurabasura.com.git
+    repo_accepts_https: true
     repo_subtree_path: site
     multisite:
       enabled: false
